[package]
name = "submodule-integrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
git2 = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.34.0"
