[package]
name = "submodule-integrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
git2 = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
